--- a/ME/ZHZ/个人中心/login/LoginViewController.xib
+++ b/ME/ZHZ/个人中心/login/LoginViewController.xib
@@ -51,12 +51,14 @@
                 <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jr3-wG-r3d">
                     <rect key="frame" x="20" y="202" width="100" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.26824210970000001" green="0.91589446080000003" blue="0.95414402170000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="100" id="Opi-ZP-TZp"/>
                         <constraint firstAttribute="height" constant="30" id="RIr-pP-u0x"/>
                     </constraints>
-                    <state key="normal" title="注册" backgroundImage="Default.png">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    <state key="normal" title="注册">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
                         <action selector="userRegister:" destination="-1" eventType="touchUpInside" id="Tog-u0-mIs"/>
@@ -65,12 +67,14 @@
                 <button appearanceType="aqua" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JDg-pE-MCN">
                     <rect key="frame" x="200" y="202" width="100" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.26824210970000001" green="0.91589446080000003" blue="0.95414402170000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="S0x-ve-YFx"/>
                         <constraint firstAttribute="width" constant="100" id="WVF-Ib-p9I"/>
                     </constraints>
-                    <state key="normal" title="登陆" backgroundImage="Default.png">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    <state key="normal" title="登陆">
+                        <color key="titleColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
                         <action selector="login:" destination="-1" eventType="touchUpInside" id="G5L-nL-gdk"/>
@@ -93,7 +97,4 @@
             <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
         </view>
     </objects>
-    <resources>
-        <image name="Default.png" width="320" height="480"/>
-    </resources>
 </document>
