--- a/ME/ZHZ/个人中心/个人信息/mycell/UserInfoCell.xib
+++ b/ME/ZHZ/个人中心/个人信息/mycell/UserInfoCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="14A261i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="14A314h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -85,6 +85,13 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     </view>
+                    <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="points" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Lj-Cs-i11">
+                        <rect key="frame" x="238" y="9" width="76" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="highlightedColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
             <connections>
@@ -92,6 +99,7 @@
                 <outlet property="focusNumLabel" destination="GCy-2B-k3U" id="cmC-W2-5zd"/>
                 <outlet property="focusedNumLabel" destination="a9X-qo-MQY" id="TxA-58-X00"/>
                 <outlet property="nameLabel" destination="VLW-1B-iLb" id="LMm-4Z-ufq"/>
+                <outlet property="pointsLabel" destination="0Lj-Cs-i11" id="Gdh-pd-3lE"/>
                 <outlet property="portrait" destination="v93-HH-Jxh" id="LgB-xC-2zw"/>
             </connections>
         </tableViewCell>
