--- a/ME/CZX/View/TrendTableViewCell.xib
+++ b/ME/CZX/View/TrendTableViewCell.xib
@@ -32,9 +32,17 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pwc-DU-MQV">
+                        <rect key="frame" x="5" y="5" width="42" height="42"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <state key="normal">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="headBtn" destination="Pwc-DU-MQV" id="j4y-Av-1Dg"/>
                 <outlet property="timeLabel" destination="Uuo-LQ-T8U" id="e3k-nt-rkZ"/>
                 <outlet property="userHeadImage" destination="q8D-h8-MA5" id="dog-mf-NiS"/>
                 <outlet property="userName" destination="0hT-Nc-Lhl" id="v85-eg-8e0"/>
